--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-
+*{box-sizing:border-box} /* I added this line */
 body{ margin: 0;}
 
 .bigimage{ min-height: 100vh; 
@@ -248,7 +248,7 @@ color: #009ffd;
             margin: auto;
         
         
-        position: absolute;
+        position: relative; /* absolute dewa chilo*/
         
         left: 43%;
         bottom: -460px;
@@ -296,23 +296,26 @@ justify-content: left;
 text-align: left;
 
 font-size: 16px;
-height: 250px;
+height: 300px;/* this line*/
 opacity: 10; 
 background-color: lightblue;
 border-radius: 5px;
 color:black;
-
+padding:7px; /* I added this line */
+display:table;
 }
 .shelter{ word-wrap: break-word;
         width: 400px;
         justify-content: center
         
         font-size: 16px;
-        height: 250px;
+        height: 300px;/* modified */
         opacity: 10; 
         background-color:  lightcoral;
         border-radius: 5px;
         text-align:left;
+        display:table;
+        
 }
 
 .backgroundtwo{ margin: 50px;
